--- a/nextjs/ignews/package.json
+++ b/nextjs/ignews/package.json
@@ -15,6 +15,7 @@
     "@types/react-dom": "18.0.10",
     "eslint": "8.32.0",
     "eslint-config-next": "13.1.2",
+    "faunadb": "^4.8.0",
     "next": "13.1.2",
     "next-auth": "^4.20.1",
     "react": "18.2.0",
