--- a/nextjs/ignews/.env.local.example
+++ b/nextjs/ignews/.env.local.example
@@ -7,6 +7,9 @@ STRIPE_WEBHOOK_SECRET= # chave fornecida pelo STRIPE CLI ao executar o comando s
 STRIPE_SUCCESS_URL=http://localhost:3000/posts
 STRIPE_CANCEL_URL=http://localhost:3000/
 
+# NEXT-AUTH
+NEXTAUTH_SECRET= # chave secreta para assinar o token JWT. Pode ser gerada no linux com o comando openssl rand -base64 32
+
 # GITHUB
 GITHUB_CLIENT_ID= # chave fornecida pelo github em Settings>Developer settings>OAuth Apps>New OAuth App
 GITHUB_CLIENT_SECRET= # chave fornecida pelo github em Settings>Developer settings>OAuth Apps>New OAuth App
@@ -17,3 +20,6 @@ FAUNADB_KEY= # chave fornecida pelo FaunaDB na guia Security>Keys (Necessário c
 # PRISMIC CMS
 PRISMIC_ENDPOINT= # endereço fornecido pelo Prismic na guia Settings>API & Security>API Endpoint
 PRISMIC_ACCESS_TOKEN= # chave fornecida pelo Prismic na guia Settings>API & Security>Generate an Access Token>Permanent access tokens
+
+# To use public keys in next, we need to prefix them with NEXT_PUBLIC_ . This is a next.js convention.
+# Example: NEXT_PUBLIC_STRIPE_PUBLIC_KEY
