--- a/nextjs/ignews/package.json
+++ b/nextjs/ignews/package.json
@@ -10,9 +10,11 @@
   },
   "dependencies": {
     "@next/font": "13.1.2",
+    "@stripe/stripe-js": "^1.49.0",
     "@types/node": "18.11.18",
     "@types/react": "18.0.26",
     "@types/react-dom": "18.0.10",
+    "axios": "^1.3.4",
     "eslint": "8.32.0",
     "eslint-config-next": "13.1.2",
     "faunadb": "^4.8.0",
