--- a/nextjs/ignews/package.json
+++ b/nextjs/ignews/package.json
@@ -6,10 +6,16 @@
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
-    "lint": "next lint"
+    "lint": "next lint",
+    "slicemachine": "start-slicemachine"
   },
   "dependencies": {
     "@next/font": "13.1.2",
+    "@prismicio/client": "^6.7.3",
+    "@prismicio/helpers": "^2.3.9",
+    "@prismicio/next": "^1.0.3",
+    "@prismicio/react": "^2.5.2",
+    "@prismicio/slice-simulator-react": "^0.2.3",
     "@stripe/stripe-js": "^1.49.0",
     "@types/node": "18.11.18",
     "@types/react": "18.0.26",
@@ -26,5 +32,9 @@
     "sass": "^1.58.0",
     "stripe": "^11.12.0",
     "typescript": "4.9.4"
+  },
+  "devDependencies": {
+    "@prismicio/types": "^0.2.7",
+    "slice-machine-ui": "^0.7.1"
   }
 }
