--- a/nextjs/ignews/tsconfig.json
+++ b/nextjs/ignews/tsconfig.json
@@ -25,5 +25,5 @@
     "**/*.tsx",
     "./.slicemachine/prismicio.d.ts"
   ],
-  "exclude": ["node_modules"]
+  "exclude": ["node_modules", "src/pages/api/_example/*"]
 }
